--- a/src/client/ts/components/Header/header.scss
+++ b/src/client/ts/components/Header/header.scss
@@ -15,7 +15,6 @@
     flex: 3;
     display: flex;
     align-items: center;
-    position: relative;
 
     &.center-column {
       flex: 1;
@@ -36,6 +35,7 @@
     &:first-child {
       align-self: flex-start;
       justify-content: flex-start;
+      position: relative;
     }
 
     &:last-child {
@@ -140,6 +140,14 @@
     }
     &[data-theme="dark"] {
       color: rgb(255, 255, 0);
+    }
+
+    position: absolute;
+    left: 0;
+
+    @include sm {
+      position: static;
+      left: auto;
     }
   }
 
